--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,14 +2,14 @@
 @import 'bootstrap-icons/font/bootstrap-icons';
 
 .chat-container {
-    height: auto;
-    max-height: 80%;
-    min-height: 80%;
+    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     justify-content: flex-end;
     padding: 10px;
+    overflow-y: scroll;
 }
 
 .msg {
