--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <%= render partial: "/nav", locals: { text: "Users" } %>
 
+<p id="notice"><%= notice %></p>
+
 <ul class="list-group" id="users">
   <% @users.where.not(id: current_user).each do |user| %>
     <li class="list-group-item d-flex justify-content-between align-items-start">
