--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,14 +5,16 @@
   <%= link_to "Edit this user", edit_user_registration_path(@user) %>
 </div>
 
-<b> Your upchats: </b>
-<ul class="list-group" id="chats">
-  <% @user.chats.each do |chat| %>
-    <li class="list-group-item d-flex justify-content-between align-items-start">
-      <span><%= render chat %></span>
-      <span><%= link_to "Show upchat", chat %></span>
-    </li>
-  <% end %>
-</div>
-
-
+<% if @user.chats.empty? %>
+  <b> You don't have any active chats, head over to <%= link_to "user list", users_path %> to start a new one! </b>
+<% else %>
+  <b> Your upchats: </b>
+  <ul class="list-group" id="chats">
+    <% @user.chats.each do |chat| %>
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+        <span><%= render chat %></span>
+        <span><%= link_to "Show upchat", chat %></span>
+      </li>
+    <% end %>
+  </div>
+<% end %>
