--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,19 @@
 <%= render partial: "/nav", locals: { text: "Dashboard for #{@user.name}" } %>
 
-<%= render @user %>
-<div>
-  <%= link_to "Edit this user", edit_user_registration_path(@user) %>
-</div>
+<div class="m-2">
+  <%= button_to "Edit user profile", edit_user_registration_path(@user), method: :get, class: "btn btn-primary" %>
 
-<% if @user.chats.empty? %>
-  <b> You don't have any active chats, head over to <%= link_to "user list", users_path %> to start a new one! </b>
-<% else %>
-  <b> Your upchats: </b>
-  <ul class="list-group" id="chats">
-    <% @user.chats.each do |chat| %>
-      <li class="list-group-item d-flex justify-content-between align-items-start">
-        <span><%= render chat %></span>
-        <span><%= link_to "Show upchat", chat %></span>
-      </li>
-    <% end %>
-  </div>
-<% end %>
+  <% if @user.chats.empty? %>
+    <b> You don't have any active chats, head over to <%= link_to "user list", users_path %> to start a new one! </b>
+  <% else %>
+    <b> Your upchats: </b>
+    <ul class="list-group" id="chats">
+      <% @user.chats.each do |chat| %>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <span><%= render chat %></span>
+          <span><%= link_to "Show upchat", chat %></span>
+        </li>
+      <% end %>
+    </div>
+  <% end %>
+</div>
